# vibevoice-app-turbo

./: .gitignore  LICENSE  README.md  metrics.md  operations-log.md  pyproject.toml  requirements.txt
scripts/: download_voices.sh  generate_podcast.py
tests/: __init__.py  test_asr.py  test_config.py  test_pipeline.py  test_tts.py
vibevoice_studio/: __init__.py  asr.py  config.py  main.py  pipeline.py  tts.py
