# VibeVoice Studio — Python package
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibevoice-studio"
version = "0.1.0"
description = "Web UI combining VibeVoice-ASR and VibeVoice-Realtime-TTS"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "GLM-5-Turbo Benchmark"},
]

dependencies = [
    "torch>=2.1.0",
    "transformers>=5.3.0",
    "accelerate>=0.25.0",
    "gradio>=5.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "soundfile>=0.12.1",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.setuptools.packages.find]
include = ["vibevoice_studio*"]
